argocd/crd-wizard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crd-wizard
  labels:
    app: crd-wizard
spec:
  type: ClusterIP
  selector:
    app: crd-wizard
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
