argocd/crd-wizard/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: crd-wizard-app
  name: crd-wizard-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - crd.yanello.net
  rules:
    - backendRefs:
        - name: crd-wizard
          port: 80
